<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/hintCity"
        android:textSize="25sp"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/txtOccupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/hintOccupation"
        android:textSize="25sp"
        android:layout_below="@+id/txtCity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/hintNumber"
        android:textSize="25sp"
        android:layout_below="@+id/txtOccupation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/txtVerb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/hintVerb"
        android:textSize="25sp"
        android:layout_below="@+id/txtNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGenerate"
        android:textSize="35sp"
        android:layout_below="@+id/txtVerb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"/>

</RelativeLayout>